compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_old_let_main.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/old-let-main.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/old-let-main.ml:1:1]
 1 │ let main () = println "hello world"
   · ─┬─
   ·  ╰── found 'l' expected '"fn"', or end of input
   ╰────
  help: stage0 currently accepts top-level zero-argument fn declarations with
        println string bodies
